--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "clsx": "^2.0.0",
+    "cookies-next": "^4.1.0",
     "next": "13.5.4",
     "preline": "^1.9.0",
     "react": "^18",
