--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@headlessui/react": "^1.7.17",
     "clsx": "^2.0.0",
     "cookies-next": "^4.1.0",
-    "next": "13.5.4",
+    "next": "^14.0.4",
     "preline": "^1.9.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
